--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\3.js-basic\\3.9\\methodStr.js"
+            "program": "${workspaceFolder}\\4.js-basic\\4.11\\censor.js"
         }
     ]
 }
